# tamp

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/DomainPlayer/: main.cpp
apps/lgp-seq-boxes/: CMakeLists.txt
apps/lgp-tree-po-blocks-baxter/: CMakeLists.txt  LGP-blocks-actions-observations-no-precondition_easy.g  LGP-blocks-actions-observations.g  LGP-blocks-fol-2w-one-table.g  LGP-blocks-fol-2w-one-table_for_display.g  LGP-blocks-fol-4-blocks-1w-one-table.g  LGP-blocks-fol-4-blocks-24w-one-table.g  LGP-blocks-fol-no-precondition_easy.g  LGP-blocks-fol-one-table-no-precondition.g  LGP-blocks-fol-one-table-no-precondition_easy.g  LGP-blocks-fol-one-table.g  LGP-blocks-fol.g  LGP-blocks-kin-2-blocks-one-table-for-display.g  LGP-blocks-kin-2w-one-table.g  LGP-blocks-kin-4-blocks-1w-one-table.g  LGP-blocks-kin-4-blocks-24w-one-table.g  LGP-blocks-kin-one-table.g  LGP-blocks-kin.g  LGP-blocks-last-block-deduction-2-blocks.g  LGP-blocks-last-block-deduction-3-blocks.g  LGP-blocks-last-block-deduction-4-blocks.g  LGP-franka-kin-one-table.g  komo_tree_groundings.cpp  main.cpp  rai.cfg
apps/lgp-tree-po-blocks-baxter/data/baxter_model/: baxter-clean-left-before-tunning-for-po-blocks.ors  baxter-left-before-tunning-for-po-blocks.ors
apps/lgp-tree-po-blocks-explo-franka/: CMakeLists.txt  LGP-2-block-6-sides-kin.g  LGP-2-blocks-1-side-fol.g  LGP-multi-blocks-multi-sides-actions-observations.g  komo_tree_groundings.cpp  main.cpp
apps/lgp-tree-po-blocks-franka-composition/: CMakeLists.txt  LGP-1-block-6-sides-fol.g  LGP-1-block-6-sides-kin.g  constants.h  main.cpp  (+18 more)
(+68 files in other folders)
